# ecosys_project_AQI_prediction

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  requirements.txt
dev/airflow/: docker-compose.yml  openapi.yaml
dev/airflow/src/dags/: airflow_dag.py  get_history.py  spark-test.py  test_dag.py
dev/airflow/src/runsD/: runflow1.py
dev/airflow/src/spark/applications/: hello-world.py  write_csv_to_postgres.py  write_df_to_postgres.py
dev/dash/: pyproject.toml
dev/dash/pipek/: default_settings.py
dev/dash/pipek/cmd/: web.py
dev/dash/pipek/dashapp/: redis_app.py  redis_tasks.py
dev/dash/pipek/jobs/: Schematics_predict.py  face_detections.py
dev/dash/pipek/models/: __init__.py  images.py  outputSc.py  users.py
dev/dash/pipek/web/: __init__.py  redis_rq.py
dev/dash/pipek/web/static/: css_style_dash.css  css_style_home.css  css_style_login.css  css_style_model.css
dev/dash/pipek/web/templates/: dashboard.html  home.html  login.html  model.html  navbar.html  page1.html  page2.html  register.html  result.html
dev/dash/pipek/web/views/: rq_test.py  sites.py  testcode.py
dev/dash/poetry_worker/: pyproject.toml
dev/model/: Schematics_model.yaml  test.py
dev/model/AQI_model/: AQI_model.py  AQI_test_model.py  AQI_test_model_real.py
dev/model/Schematics_model/: Schematics_model.py  Schematics_predict.py
dev/model/util/: change_file_name.py  change_file_size.py  convert_voc_to_yolo.py  remove_space_from_file.py
src/: Dockerfile
src/dags/: spark-postgres.py  spark-test.py
